--- a/ios/App/exportOptions.plist
+++ b/ios/App/exportOptions.plist
@@ -3,12 +3,16 @@
 <plist version="1.0">
 <dict>
     <key>method</key>
-    <string>ad-hoc</string>
+    <string>development</string>
     <key>compileBitcode</key>
     <false/>
     <key>destination</key>
     <string>export</string>
     <key>signingStyle</key>
-    <string>automatic</string>
+    <string>manual</string>
+    <key>stripSwiftSymbols</key>
+    <false/>
+    <key>thinning</key>
+    <string>&lt;none&gt;</string>
 </dict>
 </plist>
